// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should fetch and render to string with data 1`] = `
Array [
  Object {
    "meta": Object {
      "args": Array [
        "foo",
      ],
      "ssr": true,
    },
    "state": Object {
      "fulfilled": true,
      "pending": false,
      "reason": null,
      "refreshing": false,
      "rejected": false,
      "value": "foo",
    },
  },
]
`;

exports[`should not fetch data from a nested component 1`] = `
Array [
  Object {
    "meta": undefined,
    "state": Object {
      "counter": 2,
    },
  },
  Object {
    "meta": Object {
      "args": Array [
        2,
        "foo",
      ],
      "ssr": true,
    },
    "state": Object {
      "fulfilled": true,
      "pending": false,
      "reason": null,
      "refreshing": false,
      "rejected": false,
      "value": "2-foo",
    },
  },
]
`;
